@@ -1,5 +1,6 @@
 package Kaer.AuctionReminder.service;
 
+import Kaer.AuctionReminder.config.AllegroConfig;
 import Kaer.AuctionReminder.model.Auction;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
@@ -12,22 +13,24 @@ import org.springframework.web.client.RestTemplate;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class AllegroService {
     private final RestTemplate restTemplate;
-    @Value("${allegro.access-token}")
-    private String accessToken;
+    private final AllegroConfig allegroConfig;
 
-    public AllegroService() {
+    public AllegroService(AllegroConfig allegroConfig) {
         this.restTemplate = new RestTemplate();
+        this.allegroConfig = allegroConfig;
     }
 
     public List<Auction> getEndingAuctions() {
-        String url = "https://api.allegro.pl/offers/listing?sellingMode.format=AUCTION&sort=endTime"; // Poprawny endpoint
+        // Budujemy URL wykorzystując adres z konfiguracji i sortując po publication.endingAt
+        String url = allegroConfig.getApiUrl() + "/offers/listing?sellingMode.format=AUCTION&sort=publication.endingAt";
         HttpHeaders headers = new HttpHeaders();
-        headers.setBearerAuth(accessToken);
-        headers.set("Accept", "application/vnd.allegro.public.v1+json"); // Poprawny nagłówek dla Allegro API
+        headers.setBearerAuth(allegroConfig.getAccessToken());
+        headers.set("Accept", "application/vnd.allegro.public.v1+json");
 
         HttpEntity<String> entity = new HttpEntity<>(headers);
 
@@ -42,18 +45,21 @@ public class AllegroService {
         if (body == null || !body.containsKey("items")) {
             throw new RuntimeException("Nie udało się pobrać danych z API Allegro.");
         }
-
-        List<Map<String, Object>> items = (List<Map<String, Object>>) ((Map<String, Object>) body.get("items")).get("regular");
+        // Zakładamy strukturę: { "items": { "promoted": [...], "regular": [ ... ] } }
+        Map<String, Object> itemsMap = (Map<String, Object>) body.get("items");
+        List<Map<String, Object>> items = (List<Map<String, Object>>) itemsMap.get("regular");
         if (items == null) {
             throw new RuntimeException("Nie znaleziono aukcji w odpowiedzi API.");
         }
-
         return items.stream()
-                .map(item -> new Auction(
-                        (String) item.get("id"),
-                        (String) item.get("name"),
-                        (String) ((Map<String, Object>) item.get("endingTime")).get("value")
-                ))
-                .toList();
+                .map(item -> {
+                    String id = (String) item.get("id");
+                    String title = (String) item.get("name");
+                    // Pobieramy datę zakończenia z sekcji "publication.endingAt"
+                    Map<String, Object> publication = (Map<String, Object>) item.get("publication");
+                    String endingAt = (String) publication.get("endingAt");
+                    return new Auction(id, title, endingAt);
+                })
+                .collect(Collectors.toList());
     }
 }
